--- a/front/KycManager/src/app/components/loading-spinner/loading-spinner.component.html
+++ b/front/KycManager/src/app/components/loading-spinner/loading-spinner.component.html
@@ -1,9 +1,11 @@
 <div class="overlay">
   <div class="spinner-container">
-    <app-animation-snowflake></app-animation-snowflake>
     <mat-progress-spinner
       class="spinner"
       mode="indeterminate"
+      diameter="64"
+      color="primary"
     ></mat-progress-spinner>
+    <div class="spinner-text">Loading, please wait...</div>
   </div>
 </div>
