--- a/front/KycManager/src/app/components/root_component/app.component.html
+++ b/front/KycManager/src/app/components/root_component/app.component.html
@@ -7,7 +7,7 @@
 <div *ngIf="isLoggedIn()">
   <div>
     <div>
-      <app-nav-bar class="fixed top-0 w-full bg-white shadow-md z-50"></app-nav-bar>
+      <app-nav-bar></app-nav-bar>
       <router-outlet>
         <app-loading-spinner *ngIf="loading"></app-loading-spinner>
       </router-outlet>
