--- a/front/KycManager/src/app/components/login/login.component.html
+++ b/front/KycManager/src/app/components/login/login.component.html
@@ -1,4 +1,7 @@
 <section class="relative min-h-screen flex items-center justify-center overflow-hidden bg-gradient-to-b from-blue-900 via-gray-900 to-blue-500">
+  <!-- Top-right logo -->
+<img src="/assets/Sahamlogo.png" alt="Saham Logo"
+     class="absolute top-5 right-5 h-12 w-auto z-20" />
   <!-- Background SVG Wave -->
   <svg class="absolute bottom-0 left-0 w-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
     <path fill="#fff" fill-opacity="1"
