--- a/front/KycManager/src/app/components/nav-bar/nav-bar.component.html
+++ b/front/KycManager/src/app/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,10 @@
 <nav class="bg-white border-b border-gray-200 dark:bg-gray-900 dark:border-gray-700">
-  <div class="max-w-screen-xl mx-auto px-4 py-3 flex items-center justify-between">
-    <a href="/" class="flex items-center space-x-2 hover:opacity-80 transition-opacity">
-      <img src="/assets/logoblack.png" alt="Logo" class="h-9 w-auto" />
-      <span class="sr-only">Home</span>
-    </a>
+  
+  <div class="max-w-screen-xl mx-auto px-4 py-3 flex ">
+
+    <img src="/assets/Sahamlogoblack.png" alt="Saham Logo"class="absolute right-5 h-12 w-auto z-20" />
+    <img src="/assets/logoblack.png" alt="Logo" class="absolute left-5 h-12 w-auto z-20" />
+    
 
     <!-- Desktop Menu -->
     <div class="hidden md:flex space-x-4 font-medium">
@@ -55,7 +56,7 @@
          <button
           (click)="logout()"
           mat-button
-          class="w-full flex items-center gap-2 text-gray-800 dark:text-gray-100 hover:bg-red-100 dark:hover:bg-red-800 px-4 py-2 rounded transition-all duration-200"
+          class="right-0 w-full flex items-center gap-2 text-gray-800 dark:text-gray-100 hover:bg-red-100 dark:hover:bg-red-800 px-4 py-2 rounded transition-all duration-200"
         >
           <mat-icon aria-hidden="true">logout</mat-icon>
           <span>Logout</span>
